@@ -63,6 +63,12 @@ if ($location_of_bar == '') {
     $location_of_bar = $temp_location_of_bar;
 }
 
+// this value may be changed by a plugin, but initialize
+// it first to avoid register_globals headaches
+//
+$right_frame_url = '';
+do_hook('webmail_top', $null);
+
 // Determine the main frame URL
 /*
  * There are three ways to call webmail.php
@@ -78,6 +84,11 @@ if ($location_of_bar == '') {
  *
  * The test for // should catch any attempt to include off-site webpages into
  * our frameset.
+ *
+ * Note that plugins are allowed to completely and freely override the URI
+ * used for the "right" (content) frame, and they do so by modifying the
+ * global variable $right_frame_url.
+ *
  */
 if (empty($right_frame) || (strpos(urldecode($right_frame), '//') !== false)) {
     $right_frame = '';
@@ -87,27 +98,29 @@ if ( strpos($right_frame,'?') ) {
 } else {
     $right_frame_file = $right_frame;
 }
-switch($right_frame) {
-    case 'right_main.php':
-        $right_frame_url = "right_main.php?mailbox=".urlencode($mailbox)
-                       . (!empty($sort)?"&amp;sort=$sort":'')
-                       . (!empty($startMessage)?"&amp;startMessage=$startMessage":'');
-        break;
-    case 'options.php':
-        $right_frame_url = 'options.php';
-        break;
-    case 'folders.php':
-        $right_frame_url = 'folders.php';
-        break;
-    case 'compose.php':
-        $right_frame_url = 'compose.php?' . $mailtourl;
-        break;
-    case '':
-        $right_frame_url = 'right_main.php';
-        break;
-    default:
-        $right_frame_url =  urlencode($right_frame);
-        break;
+if (empty($right_frame_url)) {
+    switch($right_frame) {
+        case 'right_main.php':
+            $right_frame_url = "right_main.php?mailbox=".urlencode($mailbox)
+                           . (!empty($sort)?"&amp;sort=$sort":'')
+                           . (!empty($startMessage)?"&amp;startMessage=$startMessage":'');
+            break;
+        case 'options.php':
+            $right_frame_url = 'options.php';
+            break;
+        case 'folders.php':
+            $right_frame_url = 'folders.php';
+            break;
+        case 'compose.php':
+            $right_frame_url = 'compose.php?' . $mailtourl;
+            break;
+        case '':
+            $right_frame_url = 'right_main.php';
+            break;
+        default:
+            $right_frame_url =  urlencode($right_frame);
+            break;
+    }
 }
 
 $oErrorHandler->setDelayedErrors(true);
@@ -115,8 +128,6 @@ $oErrorHandler->setDelayedErrors(true);
 $oTemplate->assign('nav_size', $left_size);
 $oTemplate->assign('nav_on_left', $location_of_bar=='left');
 $oTemplate->assign('right_frame_url', $right_frame_url);
-
-do_hook('webmail_top', $null);
 
 displayHtmlHeader($org_title, '', false, true);
 
